Fix Scrollbar issues
Fix the vertical scrollbar for resolutions > 1500 px, where
the scrollbar sometimes was around 50px next to the end of
the window.

--- a/src/fauxton/assets/less/fauxton.less
+++ b/src/fauxton/assets/less/fauxton.less
@@ -546,7 +546,6 @@ table.databases {
 
 #dashboard {
   z-index: 2;
-  max-width: 1500px;
   .box-shadow(-6px 0 rgba(0, 0, 0, 0.1));
   border-left: 1px solid #999;
   position: absolute;
